# adk-ui-copilotkit-demo

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START_LANGGRAPH.md  README.md  SKILL.md
.agents/skills/plan-generator/agents/: openai.yaml
.agents/skills/plan-generator/commands/: plan-generator.md
.agents/skills/plan-generator/rules/: plan-generator.md
.agents/skills/plan-generator/scripts/: main.cjs
.github/: copilot-instructions.md
sagent/: main.py
sagent/agents/data_analyst/: agent.py  tools.py
sagent_langgraph/: README.md  __init__.py  graph.py  main.py  pyproject.toml  state.py
sagent_langgraph/agents/: data_analyst.py  rag.py  root.py  search.py
sagent_langgraph/callbacks/: __init__.py
sagent_langgraph/instructions/: data_analyst.md
sagent_langgraph/tools/: __init__.py
terraform/environments/prod/permissions/project/: project_permissions.tf
web/: .env.example
web/src/app/api/copilotkit/: route.ts
web/src/app/api/sessions/[sessionId]/cancel/: route.ts
web/src/components/: chat-with-history.tsx  copilotkit-provider.tsx
web/src/components/charts/: index.tsx
web/src/components/chat/: chat-window.tsx  message.tsx  prompt-input.tsx
web/src/components/chat/tool-call/: index.tsx  primitives.tsx  widget-display.tsx
web/src/components/chat/tool-call/renderers/: data-analyst.tsx
web/src/components/settings/: developer-settings.tsx  index.ts  settings-dialog.tsx
